--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 .vscode
 SFML-3.0.0_WIN-64bit
+SFML-2.6.1_WIN-64bit
 main.exe
 sfml-network-3.dll
 sfml-system-3.dll
+sfml-network-2.dll
+sfml-system-2.dll
 tests
 loaderio-b8dc8aec6e95bc53b4b87ad0820b4901.txt
